# HexProx

./: .gitignore  README.md  azure-pipeline.yaml  azure.yaml  function_app.py  hexagon.py  host.json  main.py  pyproject.toml  requirements.txt  test_main.http
hexprox/: config.py  hexagon.py  key_manager.py  main.py
tests/: test_app.py
