[project]
name = "hexprox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "requests==2.32.4",
    "uvicorn>=0.34.3",
    "azure-functions",
    "azure-identity",
    "azure-keyvault",
    "azure-keyvault-secrets"
]
