[project]
name = "hexprox"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "requests==2.32.4",
    "uvicorn>=0.34.3",
    "azure-functions",
    "azure-identity",
    "azure-keyvault",
    "azure-keyvault-secrets"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]
